Fixed spacing and size

--- a/blog/blog.css
+++ b/blog/blog.css
@@ -14,7 +14,7 @@
 body {
    font-family: var(--body-font);
    color: var(--text-dark);
-   font-size: 0.8rem;
+   font-size: 1.2rem;
    margin: 0;
 }
 
@@ -39,9 +39,9 @@ body {
 h1 {
    text-align: center;
    font-family: var(--headline-font);
-   /*font-size: 2rem;*/
-   font-weight: 600;
-   margin: 2rem 0;
+   font-size: 2.7rem;
+   font-weight: 500;
+   margin: 2.5rem 0;
 }
 
 /* *** MENU *** */
@@ -57,17 +57,17 @@ h1 {
 
 nav ul {
    display: grid;
-   grid-template-columns: 3.2rem 3.8rem 5.8rem;
+   grid-template-columns: 3.8rem 4.8rem 6.7rem;
    list-style-type: none;
    padding-left: 0;
    margin: 0.8rem 0.9rem;
 }
 
 nav a {
-   font-size: 0.8rem;
+   font-size: 1rem;
    text-decoration: none;
    color: var(--header-color);
-   font-weight: 600;
+   font-weight: 400;
 }
 
 /* REVIEW HEADERS */
@@ -82,41 +82,44 @@ main {
    margin: 1rem 0;
    display: grid;
    grid-template-columns: 3fr 1fr;
-   gap: 0.1rem;
 }
 
 /* *** REVIEWS *** */
+
 article {
    display: grid;
    grid-template-columns: 1fr 3fr;
-   padding-bottom: 1rem;
-   gap: 0.5rem;
+   padding: 0.8rem 0;
+   margin-top: 0.6rem;
 }
 
 .book-name {
    margin: 0;
    margin-bottom: 1rem;
+   font-size: 1.9rem;
+   font-weight: 600;
 }
 
 .review-meta-data {
    border-right: solid 1px var(--primary-color);
-   padding: 0.5rem;
-   width: 140px;
+   padding: 0 0.7rem;
+   padding-top: 0.7rem;
+   width: 13rem;
    text-align: right;
-   font-size: 0.6rem;
+   font-size: 1rem;
 }
 
 time {
-   font-size: 0.7rem;
+   font-size: 1.2rem;
 }
 
 .review-meta-data > p {
-   margin: 0.5rem;
+   padding-top: 0.4rem;
+   margin: 0.3rem;
 }
 
 .review-content {
-   padding: 0.5rem;
-   padding-top: 1rem;
+   margin: 0rem 1rem;
    display: flex;
    flex-direction: column;
    width: fit-content;
@@ -124,26 +127,34 @@ time {
 }
 
 .review-content img {
-   max-width: 10rem;
-   max-width: 10.7rem;
    margin: 0;
    padding-left: 1.5rem;
    padding-left: 1.6rem;
    align-self: center;
 }
 
+.summary {
+   font-size: 1em;
+}
+
+.review-link {
+   text-decoration: none;
+   margin-left: 0.5rem;
+   color: var(--header-color);
+}
+
 /* *** FILTER FORM *** */
 .filter {
-   font-size: 0.7rem;
+   font-size: 0.8rem;
    align-self: start;
    margin: 1rem;
-   padding: 0.5rem 0;
-   margin-top: 0.4rem;
-   margin-right: 3rem;
-   margin-left: 0rem;
+   padding: 1rem 0;
+   margin-top: 1.6rem;
+   margin-right: 2rem;
+   margin-left: 0.2rem;
    border: 1px solid var(--primary-color);
    box-sizing: border-box;
    justify-self: center;
-   width: 10rem;
-   height: 40rem;
+   width: 12rem;
+   height: 60rem;
 }
